# internship-trading-system

./: .gitignore  CMakeLists.txt  README.md  run_experiment.sh  run_functional_test.sh  test_snapshot_recovery.sh  test_snapshot_recovery_v2.sh
conf/: matching_engine.conf
doc/: 交易系统知识.md  代码执行逻辑与文件解析.md  内存快照技术调研笔记.md  实习课题：交易系统快速内存快照方案调研与原型实现.md  撮合引擎与快照设计方案.md  笔记.md
include/common/: Logger.h  ObjectPool.h  Order.h  Types.h
include/engine/: Account.h  AccountManager.h  Engine.h  OrderBook.h  PriceLevel.h  SkipList.h
src/: main.cpp
src/engine/: AccountManager.cpp  Engine.cpp  OrderBook.cpp  PriceLevel.cpp
test/: gen_data.py  gen_snapshot_test.py  memory_simulator.cpp  plot_results_v2.py  run_functional_test.sh  test_scenario.txt  test_snapshot_recovery.sh  test_trading.txt
